# lab2_3

./: Animal.h  Bird.h  CMakeLists.txt  Circle.cpp  Circle.h  Figures.cpp  Figures.h  Fish.h  FlyingBird.h  Human.cpp  Human.h  Rectangle.cpp  Rectangle.h  Student.cpp  Student.h  Summator.cpp  Summator.h  Teacher.cpp  Teacher.h  main.cpp  trapezoid.cpp  trapezoid.h  triangle.cpp  triangle.h
